--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   , "private": true
   , "dependencies": {
       "express": ">=2.5.8"
-    , "jade": ">= 0.0.1"
     , "everyauth": ">=0.2.32"
+    , "node-static": ">=0.6.0"
+    , "af": ">= 0.0.2"
   },
   "engines": {
     "node": "0.6.x",
